# f1-predictor

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
src/: data_loader.py  train.py
src/f1predictor/: __init__.py
src/f1predictor/data/: __init__.py  fastf1_loader.py  fetch.py  openf1_client.py  schedule.py
tests/: test_imports.py
