[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-predictor"
version = "0.1.0"
description = "Production F1 race finish position predictor."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kerem Burak Yilmaz" }]

[project.optional-dependencies]
core = [
    "fastf1>=3.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "PyYAML>=6.0",
]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "catboost>=1.2",
    "shap>=0.46",
    "optuna>=4.0",
    "scipy>=1.13",
]
tracking = [
    "mlflow>=2.16",
]
pipeline = [
    "dvc>=3.50",
    "prefect>=3",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]
dev = [
    "black>=24.8",
    "pre-commit>=3.8",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
